Remove:  - Add some ready-to-use write procedure callback in AWS.Net.Log. One for plain    text and one for binary data (ala Emacs hexl-mode). Add:  - Document AWS.Net.Log feature.

--- a/docs/TODO
+++ b/docs/TODO
@@ -167,5 +167,4 @@ implemented:
 
 - Add reply-all support to the Web_Mail service.
 
-- Add some ready-to-use write procedure callback in AWS.Net.Log. One for plain
-  text and one for binary data (ala Emacs hexl-mode).
+- Document AWS.Net.Log feature.
