--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-02  Pascal Obry  <pascal@obry.org>
+
+	* aws-url.ads:
+	Minor reformatting.
+
 2004-11-01  Pascal Obry  <pascal@obry.org>
 
 	* aws-client.adb:
