--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-03  Pascal Obry  <pascal@obry.org>
+
+	* ada2wsdl-parser.adb:
+	(Analyse_Array_Component): Properly check for selected components.
+
 2004-11-02  Pascal Obry  <pascal@obry.org>
 
 	* ada2wsdl-parser.adb:
