Add:  - Fix bug in the alpha splitter

--- a/docs/TODO
+++ b/docs/TODO
@@ -166,3 +166,5 @@ implemented:
 =============== Point to fix/implement/review before next release (2.1)
 
 - Add reply-all support to the Web_Mail service.
+
+- Fix bug in the alpha splitter
