--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,13 @@
 2004-11-07  Pascal Obry  <pascal@obry.org>
 
+	* aws-services-split_pages-uniform-alpha.ads:
+	Minor reformatting.
+
+	* aws-services-split_pages-alpha.ads:
+	Minor reformatting.
+	
+2004-11-07  Pascal Obry  <pascal@obry.org>
+
 	* aws-exceptions.ads:
 	Minor reformatting.
 	Update copyright notice.
