--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,7 @@ Work on this project has started on January 2000. This project has been
 improving from release to release to become a viable embedded Web server and
 has matured to a complete Web development framework.
 
-AWS is the work of two developers over this period.
+AWS is mainly the work of two developers over this period.
 
 Dmitriy Anisimkov	anisimkov@yahoo.com
 
