--- a/docs/TODO
+++ b/docs/TODO
@@ -162,9 +162,15 @@ implemented:
   whatever is needed with the uploaded file. If file upload is not permitted
   the file will never be transmitted.
 
-- Add a routine to sort a vector tag
+- Add a routine to sort a vector tag either in the API or as a table
+  attribute:
+  @@TABLE@@ @@SORT:VAR@@
 
-- Add a routine to reverse a vector tag
+- Add a routine to reverse a vector tag either in the API or as a table
+  attribute:
+  @@TABLE@@ @@REVERSE:VAR@@
+
+  Have a way to combine table attributes : @@SORT:REVERSE:VAR@@
 
 - Add a routine to do a synchronized sort on multiple vector tag (from a
   Translate_Set for example.
@@ -181,8 +187,6 @@ implemented:
 =============== Point to fix/implement/review before next release (2.1)
 
 - Add reply-all support to the Web_Mail service.
-
-- Check status of PAGE_INDEX/PAGE_NUMBER and upward compatibility.
 
 - Check that AWS builds fine with GNAT 3.4.3 with SOAP support.
   We should be able to remove the tools/makefile kludge (-largs -laws).
