--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-11  Pascal Obry  <pascal@obry.org>
+
+	* aws-services-directory.adb:
+	(Get_Order): Add missing header box.
+
 2004-11-08  Pascal Obry  <pascal@obry.org>
 
 	* aws-services-web_mail.adb:
