--- a/docs/TODO
+++ b/docs/TODO
@@ -179,7 +179,7 @@ implemented:
 
   @@TABLE@@             1,1
   @@TABLE@@             1,2
-  @@_M_@@                     <- empty line because m(1) is smaller than m(2)
+  @_M_@                      <- empty line because m(1) is smaller than m(2)
   @@END_TABLE@@         2,1
   @@END_TABLE@@         2,2
                         2,3
