--- a/config/projects/ChangeLog
+++ b/config/projects/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-13  Pascal Obry  <pascal@obry.org>
+
+	* ai302.gpr:
+	Initial revision.
+
 2004-10-07  Pascal Obry  <pascal@obry.org>
 
 	* aws.gpr, aws_ssl.gpr:
