--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-13  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(setup): Do not build zlib there, it is already built with the
+	 build target.
+
 2004-10-11  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
