--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-13  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(ada2wsdl-options.adb): Remove generated options for XML/Ada.
+	Kill style checking.
+
 2004-11-04  Pascal Obry  <pascal@obry.org>
 
 	* wsdl2aws.adb:
