--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-server.adb:
+	(Start): Rollback previous modification.
+
 2004-11-16  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser.adb:
