--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-16  Pascal Obry  <pascal@obry.net>
+
+	* makefile:
+	(clean): Remove *.o from the list of files to remove. There is no
+	 such file there now.
+
 2004-03-03  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
