--- a/win32/ChangeLog
+++ b/win32/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-16  Pascal Obry  <pascal@obry.net>
+
+	* makefile:
+	(clean): Properly delete aws.coff by using $(AWS_COFF).
+
 2004-11-14  Pascal Obry  <pascal@obry.org>
 
 	* poll.ads:
