--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,6 +1,15 @@
 2004-11-18  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* src/check_config.c:
+	(AF_INET): New constant.
+	(AF_INET6): New constant.
+
+	* aws-net-std__ipv6.adb:
+	(Peer_Addr): Show unknown protocol family number.
+
+2004-11-18  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* src/check_config.c:
 	Do not depend on nfds_t definition under Win32 and FreeBSD.
 
 2004-11-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
