--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,11 @@
+2004-11-26  Pascal Obry  <pascal@obry.org>
+
+	* demos_shared.gpr:
+	(Binder): Move package to main shared project.
+
+	* demos.gpr, demos_ssl.gpr:
+	(Binder): Now a renaming of Shared.Binder.
+
 2004-11-16  Pascal Obry  <pascal@obry.org>
 
 	* demos.gpr, demos_ssl.gpr:
