--- a/docs/TODO
+++ b/docs/TODO
@@ -65,7 +65,7 @@ implemented:
 - Add support for more XML Schema types
   See "C Datatypes and Facets" in XML Schema Part 2 Datatypes.
 
-  byte, unsignedByte, short, unsignedShort, unsignedInt,
+  byte, unsignedByte, unsignedShort, unsignedInt,
   unsignedLong, date, time, xsd:hexBinary, decimal
 
   decimal is certainly a bit difficult to support, we need an arbitrary
@@ -190,3 +190,6 @@ implemented:
 
 - Check that AWS builds fine with GNAT 3.4.3 with SOAP support.
   We should be able to remove the tools/makefile kludge (-largs -laws).
+
+- Add a way to select/exclude a specific set of operations from a WSDL
+  document from wsdl2aws.
