--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-01  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(Clean): Update to clean new generated files.
+
 2004-11-29  Pascal Obry  <pascal@obry.org>
 
 	* soap1.out, soap2.out, soap3.out, soap4.out, soap5.out, soap6.out,
