--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-02  Pascal Obry  <pascal@obry.org>
+
+	* wsdl_a.out, wsdl_b.out, register.out:
+	Update output.
+
 2004-12-01  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
