--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,4 +1,15 @@
-2004-12-01  Pascal Obry  <obry@adacore.com>
+2004-12-02  Pascal Obry  <pascal@obry.org>
+
+	* ada2wsdl-parser.adb:
+	Lot of changes to support for name spaces. Now all WSDL	definitions
+	 for records, arrays, derived types are generated with the package
+	 name as part of the name space.
+	
+	* ada2wsdl-generator.ads, ada2wsdl-generator.adb: 
+	Idem.
+	Update copyright notice.
+
+2004-12-01  Pascal Obry  <pascal@obry.org>
 
 	* ada2wsdl-generator.adb:
 	(Write_Header): Change namespace to "http://soapaws/".
