--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,5 +1,10 @@
 2004-12-02  Pascal Obry  <pascal@obry.org>
 
+	* soap-generator.adb:
+	Remove some commented out code.
+
+2004-12-02  Pascal Obry  <pascal@obry.org>
+
 	* soap-generator-name_set.adb:
 	(Set): Use a bigger table.
 	Update copyright notice.
